# AI_ImageDetector

./: .gitignore  README.md
Docs/: ArchitectureOverview.md  Backend.md  BackendImplementation.md  Frontend.md  FrontendImplementation.md
PCM/WebContent/: Login.jsp
PCM/WebContent/Autocompletado/: awesomplete.min.js  awesomplete.theme.css
PCM/WebContent/Comunes/: AdministracionAtributos.jsp  AdministracionFamilias.jsp  AdministracionMateriales.jsp  AdministracionUsuario.jsp  ConsultaGeneral.jsp  Login.jsp  Master.jsp  PerfilUsuario.jsp  RegistroIndividual.jsp  RegistroMasivo.jsp
PCM/WebContent/js/: funciones.js
PCM/src/controladores/: imagenes.java  productoServlet.java  usuarioServlet.java
PCM_2.0/WebContent/js/: funciones.js
PCM_QA/: .project
PCM_QA/WebContent/: Login.jsp
backend/: README.md  env.example  pyproject.toml
backend/src/: __init__.py  app.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/routes/: __init__.py  analyze_pair.py  examples.py  pairs.py
backend/src/api/schemas/: __init__.py  pairs.py
backend/src/config/: __init__.py  settings.py
backend/src/core/: __init__.py  features.py  gradients.py  image_io.py  visualization.py
backend/src/data_access/: __init__.py  analysis_repository.py  experiment_repository.py  file_storage.py  pair_repository.py
backend/src/detection/: __init__.py  base.py  gradient_stats_detector.py  histogram_chi2_detector.py  std_ratio_detector.py
backend/src/domain/: __init__.py  analysis_result.py  detector.py  image_pair.py
backend/src/utils/: __init__.py  errors.py  logging.py
(+100 files in other folders)
